/*
Copyright IBM Corp. All Rights Reserved.

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

package testenginepb;

import "mirbftpb/mirbft.proto";

// To re-generate, run:
//   protoc --go_out=. testengine.proto
// or simply run go generate

message ScenarioConfig {
	string name = 1;
	string description = 2;
	mirbftpb.NetworkConfig initial_network_config = 3;
	repeated NodeConfig node_configs = 4;
}

message NodeConfig {
	uint64 id = 1;
	int32 heartbeat_ticks = 2;
	int32 suspect_ticks = 3;
	int32 new_epoch_timeout_ticks = 4;
	int32 tick_interval = 5;   // in fake ms
	int32 link_latency = 6;    // in fake ms
	int32 ready_latency = 7;   // in fake ms
	int32 process_latency = 8; // in fake ms
	int32 buffer_size = 9;
}

message HashResult {
	bytes digest = 1;
	oneof type {
		Request request = 2;
		Batch batch = 3;
		EpochChange epoch_change = 4;
		VerifyBatch verify_batch = 5;
		VerifyRequest verify_request = 6;
        }
}
message Request {
	uint64 source = 1;
	mirbftpb.Request request = 2;
}

message VerifyRequest {
	uint64 source = 1;
	mirbftpb.Request request = 2;
	bytes expected_digest = 3;
}

message Batch {
	uint64 source = 1;
	uint64 epoch = 2;
	uint64 seq_no = 3;
	repeated mirbftpb.RequestAck request_acks = 5;
}

message VerifyBatch {
	uint64 source = 1;
	uint64 seq_no = 2;
	repeated mirbftpb.RequestAck request_acks = 3;
	bytes expected_digest = 4;
}

message EpochChange {
	uint64 source = 1;
	uint64 origin = 2;
	mirbftpb.EpochChange epoch_change = 3;
}

message Checkpoint {
	uint64 seq_no = 1;
	bytes value = 2;
}

message Event {
	message Apply {
		repeated HashResult digests = 1;
		repeated Checkpoint checkpoints = 2;
	}

	message Process {}

	message Propose {
		mirbftpb.Request request = 1;
	}

	message Receive {
		uint64 source = 1;
		mirbftpb.Msg msg = 2;
	}

	message Tick {}

	uint64 target = 1;
	uint64 time = 2;
	oneof type {
		Apply apply = 3;
		Receive receive = 4;
		Process process = 5;
		Propose propose = 6;
		Tick tick = 7;
	}

	bool dropped = 8;
	uint64 delayed = 9;
	uint64 duplicated = 10;
}

message LogEntry {
	oneof Type {
		ScenarioConfig scenario = 1;
		Event event = 2;
	}
}
